# talent-agent

./: pyproject.toml
src/: config.py  database.py  main.py  models.py  settings.py  utils.py
src/core/: admin_agent.py
src/routes/: admin_router.py  public_router.py
