[project]
name = "talent-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.17",
    "azure-cosmos>=4.9.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "openai>=1.75.0",
    "pydantic-ai>=0.1.3",
    "ruff>=0.11.6",
]
